<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp"
    android:paddingEnd="15dp"
    android:paddingStart="60dp"
    android:clipToPadding="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_body"
        android:background="@color/blue"
        android:padding="10dp"
        android:elevation="2dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:text="@string/placeholder_message"
        />

</RelativeLayout>