<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.login.RegisterFormActivity">

    <TextView
        android:id="@+id/createText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/register_newAccount"
        android:textColor="@color/green"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <EditText
        android:id="@+id/username"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/input_field"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/register_username"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="15sp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/input_field"
        android:drawableStart="@drawable/ic_action_mail"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:text=""
        android:textSize="15sp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtRegisterPassword"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/input_field"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:text=""
        android:textSize="15sp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordconf"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/input_field"
        android:drawableStart="@drawable/ic_action_pw_conf"
        android:ems="10"
        android:hint="@string/register_pw_conf"
        android:inputType="textPassword"
        android:text=""
        android:textSize="15sp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterPassword"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/register"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.19221412" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.809" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="79dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/username"
        app:layout_constraintGuide_percent="0.11"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.809" />

</androidx.constraintlayout.widget.ConstraintLayout>