...
        android:text="@string/main_multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/solo" />

    <Button
        android:id="@+id/rulesButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/main_rules"
        android:background="@drawable/general_btn_rounded"
        app:layout_constraintEnd_toEndOf="parent"
...
